--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -1,1 +1,15 @@
-p This is the partial for view 1.
+form(name="MainForm")
+    label First Name
+        input.inset(type="text",placeholder="Enter first Name")
+
+    label Last Name
+        input.inset(type="text", placeholder="Enter last Name")
+
+    label Email Address
+        input.inset(type="text", placeholder="Enter Email Address")
+
+    label Address
+        input.inset(type="text", placeholder="Enter Address")
+
+    label Phone Number
+        input.inset(type="text", placeholder="Enter last Name")
