--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,3 +28,55 @@
   content: "";
   padding: 0;
 }
+
+body {
+    width: 470px;
+    margin: 20px auto;
+    color: #333;
+    font: 14px/1.6em Arial, Helvetica, sans-serif;
+    background: #f5f5f5;
+}
+
+h1 {
+    padding: 15px 30px 15px;
+    color: #f5f5f5;
+    font-size: 32px;
+    text-align: center;
+    background-color: #900;
+}
+
+label {
+    display: block;
+    margin-bottom: 1em;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+input[type=text] {
+    margin-bottom: 0.5em;
+}
+
+input[type=text]:focus {
+    outline: none;
+    background: #f9f9e9;
+}
+
+p {
+    margin-bottom: 2em;
+}
+
+.inset {
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0.5em;
+    background: #f9f9f9;
+    border-style: solid;
+    border-width: 30px;
+    border-top-color: #e5e5e5;
+    border-right-color: #eee;
+    border-bottom-color: #e5e5e5;
+    border-left-color: #eee;
+}
