--- a/views/partials/partial2.jade
+++ b/views/partials/partial2.jade
@@ -1,4 +1,34 @@
-p This is the partial for view 2.
-p
-  | Showing of 'interpolate' filter:
-  | {{ 'Current version is v%VERSION%.' | interpolate }}
+.row
+    .readtext
+        .pull-right
+            ul.inline
+                li
+                    a.label(href='view1') Print
+                li
+                    a.label(href='view1') Save as PDF
+
+.well.readtext.documentshadow
+    h3 Matthew Lovan
+    h5 MattLovan@gmail.com | 208.871.2928 <br>
+        | 834 Johnson Street, Suite 808 | Victoria, BC V8W 1N3 <br><br>
+
+    h5.SectionTitle  Samples, Demos, Projects
+
+    ul.inline
+        li
+            a(href='view1') GitHub
+        li
+            a(href='view2') StackOverflow
+        li
+            a(href='view2') LinkedIn
+        li
+            a(href='view2') Facebook
+        li
+            a(href='view2') Twitter
+
+    h5.SectionTitle  Education
+    p  University of Idaho
+
+    h5.SectionTitle  Professional Experience
+    p FAST Enterprises <br> Fast Enterprises develops web-based revenue management software for government agencies. Their product is a multi-tier application utilizing SQL Server, VB.NET, and jQuery to provide a platform for AGILE development. Consultants at FAST Enterprises are responsible for all phases of the SDLC, including gathering requirements, development, testing and documentation.
+
