--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,81 +2,131 @@
 
 .menu {
   list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
-}
-
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
+  margin-left: 0px;
+  margin: 1em;
 }
 
 .menu > li {
-  display: inline;
+    display: inline;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+.menubutton {
+    color: #fff;
+    padding: 0.5em 1em;
+    margin: 0 0 0 .75em;
+    background-color: #91B5DB;
+    border-top-color: #91B5DB;
+    border-left-color: #91B5DB;
+    border-right-color: #91B5DB;
+    border-bottom-color: #7591b1;
+    border-width: 1px;
+    border-style: solid;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+
+.bottomshadow{
+    -webkit-box-shadow: 0 4px 8px -3px #999CA0;
+    -moz-box-shadow:    0 4px 8px -3px #999CA0;
+    box-shadow:         0 4px 8px -3px #999CA0;
 }
 
-body {
-    width: 470px;
-    margin: 20px auto;
-    color: #333;
-    font: 14px/1.6em Arial, Helvetica, sans-serif;
-    background: #f5f5f5;
+
+.hero-unit{
+    color: #ffffff;
+    background-color: #2C4864;
+    border-radius: 0;
+    margin-bottom: 0em;
 }
 
-h1 {
-    padding: 15px 30px 15px;
-    color: #f5f5f5;
-    font-size: 32px;
-    text-align: center;
-    background-color: #900;
-}
-
-label {
-    display: block;
-    margin-bottom: 1em;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-input[type=text] {
-    margin-bottom: 0.5em;
-}
-
-input[type=text]:focus {
-    outline: none;
-    background: #f9f9e9;
-}
-
-p {
-    margin-bottom: 2em;
-}
-
-.inset {
-    width: 100%;
+.picture{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: 0.5em;
-    background: #f9f9f9;
+    background-color: #195695;
+    border-top-color: #195695;
+    border-left-color: #195695;
+    border-right-color: #2C4864;
+    border-bottom-color: #2C4864;
+    border-width: 5px;
     border-style: solid;
-    border-width: 30px;
-    border-top-color: #e5e5e5;
-    border-right-color: #eee;
-    border-bottom-color: #e5e5e5;
-    border-left-color: #eee;
+}
+
+.well {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #77818B;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+
+
+.SectionTitle{
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
+    text-transform:uppercase;
+    margin-bottom: .5em;
+    margin-top: 2em;
+}
+
+.SectionContent{
+    max-width: 46em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.readtext{
+    max-width: 55em;
+    margin-left: auto;
+    margin-right: auto  ;
+    color: #2B2D30;
+}
+
+.document {
+    min-height: 20px;
+    padding: 19px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    background-color: #f5f5f5;
+    border: 1px solid #bbbbbb;
+}
+
+.documentshadow {
+    -moz-box-shadow:    2px 2px 10px 0px #999CA0;
+    -webkit-box-shadow: 2px 2px 10px 0px #999CA0;
+    box-shadow:         2px 2px 10px 0px #999CA0;
+}
+
+.well > p:first-child:first-letter {
+    float: left;
+    color: #2C4864;
+    font-size: 3.75em;
+    line-height: 1em;
+    padding-right: .2em;
+    padding-left: 3px;
+    font-family: Georgia;
+}
+
+blockquote{margin-top: 1em;}
+
+.divider{
+    border-bottom: 0.1em solid #77818B;
+    margin-bottom: 1.5em;
+}
+
+ul,
+ol {
+    padding: 0;
+    margin: 0;
+}
+
+#twitter{
+
+    margin-top: 1em;
 }
