--- a/views/partials/partial1.jade
+++ b/views/partials/partial1.jade
@@ -27,7 +27,7 @@
 
     .span3
         .picture.bottomshadow
-            img(src='/img/ProfilePic.jpg')
+            img(src='/img/ProfilePicBW.jpg')
 
     .span3
         #twitter
