--- a/public/css/app.css
+++ b/public/css/app.css
@@ -42,12 +42,12 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background-color: #195695;
-    border-top-color: #195695;
-    border-left-color: #195695;
-    border-right-color: #2C4864;
-    border-bottom-color: #2C4864;
-    border-width: 5px;
+    background-color: #91B5DB;
+    border-top-color: #91B5DB;
+    border-left-color: #91B5DB;
+    border-right-color: #7591b1;
+    border-bottom-color: #7591b1;
+    border-width: 4px;
     border-style: solid;
 }
 
