--- a/views/index.jade
+++ b/views/index.jade
@@ -2,26 +2,30 @@ extends layout
 
 block body
 
-    .container(ng-controller='AppCtrl')
+    #wrap
+        .container(ng-controller='AppCtrl')
 
-        .hero-unit
-            h1 Matt Lovan
-            p node + express + jade/less + angular + bootstrap
-        ul.menu
-            li
-                a.menubutton.bottomshadow(href='view1') Bio
-            li
-                a.menubutton.bottomshadow(href='view2') Projects
-            li
-                a.menubutton.bottomshadow(href='view2') Blog
-            li
-                a.menubutton.bottomshadow(href='view2') Resume
-            li
-                a.menubutton.bottomshadow(href='view2') Sandbox
-        .divider
+            .hero-unit
+                h1 Matt Lovan
+                p web development a·fi·ci·o·na·do
+            ul.menu
+                li
+                    a.menubutton.bottomshadow(href='Bio') Bio
+                li
+                    a.menubutton.bottomshadow(href='Projects') Projects
+                li
+                    a.menubutton.bottomshadow(href='Blog') Blog
+                li
+                    a.menubutton.bottomshadow(href='Resume') Resume
+                li
+                    a.menubutton.bottomshadow(href='Sandbox') Sandbox
+            .divider
 
-        div(ng-view)
+            div(ng-view)
 
+        #footer
+            .container
+                p(class = "muted credit")   Credit
 
 
     script(src='js/lib/jquery-1.9.1.js')
