--- a/views/partials/Blog.jade
+++ b/views/partials/Blog.jade
@@ -2,3 +2,16 @@
    Created by MLovan
    Date: 5/5/13
    Time: 8:09 PM
+
+ul.menu
+    li
+        a.menubutton.bottomshadow(href='Bio') Bio
+    li
+        a.menubutton.bottomshadow(href='Projects') Projects
+    li
+        a.menubutton.bottomshadow.active(href='Blog') Blog
+    li
+        a.menubutton.bottomshadow(href='Resume') Resume
+    li
+        a.menubutton.bottomshadow(href='Sandbox') Sandbox
+.divider
