--- a/views/partials/Projects.jade
+++ b/views/partials/Projects.jade
@@ -2,6 +2,52 @@
    Created by MLovan
    Date: 5/5/13
    Time: 8:09 PM
+ul.menu
+    li
+        a.menubutton.bottomshadow(href='Bio') Bio
+    li
+        a.menubutton.bottomshadow.active(href='Projects') Projects
+    li
+        a.menubutton.bottomshadow(href='Blog') Blog
+    li
+        a.menubutton.bottomshadow(href='Resume') Resume
+    li
+        a.menubutton.bottomshadow(href='Sandbox') Sandbox
+.divider
+ul.thumbnails
+    li.span4
+        .thumbnail
+            img(src="img/pie-chart-icon.png", alt="")
+            h3 Compare Treatment
+            p Tool for camparing diabetes treatment
+
+    li.span4
+        .thumbnail
+            img(src="img/dog-icon.png", alt="")
+            h3 Dog Website
+            p Keep track of yout litter
+
+    li.span4
+        .thumbnail
+            img(src="img/rsz_so-icon.png", alt="")
+            h3 stackoverflow
+            p View My Profile
 
 
+    li.span4
+        .thumbnail
+            img(src="img/github-icon.png", alt="")
+            h3 Git Projects
+            p Browse the code for all projects on this site
 
+    li.span4
+        .thumbnail
+            img(src="img/github-icon.png", alt="")
+            h3 Git Projects
+            p Browse the code for all projects on this site
+
+    li.span4
+        .thumbnail
+            img(src="img/github-icon.png", alt="")
+            h3 Git Projects
+            p Browse the code for all projects on this site
