--- a/public/css/app.css
+++ b/public/css/app.css
@@ -22,6 +22,26 @@
     border-width: 1px;
     border-style: solid;
 }
+.menubutton:hover {
+    filter:         brightness(0.9);
+    // Browser Specific
+    -webkit-filter: brightness(0.9);
+    -moz-filter:    brightness(0.9);
+    -o-filter:      brightness(0.9);
+    -ms-filter:     brightness(0.9);
+    color: white;
+    text-decoration: none;
+
+}
+
+.active {
+   -moz-box-shadow:    inset 0 0 10px 1px #7591b1;
+   -webkit-box-shadow: inset 0 0 10px 1px #7591b1;
+   box-shadow:         inset 0 0 10px 1px #7591b1;
+    background-color: #7591b1;
+
+
+}
 
 
 .bottomshadow{
@@ -126,7 +146,41 @@ ol {
     margin: 0;
 }
 
-#twitter{
+/*#twitter{
     max-height: 500px;
     margin-top: 1em;
+}*/
+
+html,
+body {
+    height: 100%;
+    /* The html and body elements cannot have any padding or margin. */
+}
+
+/* Wrapper for page content to push down footer */
+#wrap {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -30px;
+}
+
+/* Set the fixed height of the footer here */
+#push,
+#footer {
+    height: 30px;
+}
+#footer {
+    background-color: #f5f5f5;
+}
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+    #footer {
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
