--- a/views/index.jade
+++ b/views/index.jade
@@ -8,24 +8,12 @@ block body
             .hero-unit
                 h1 Matt Lovan
                 p web development a·fi·ci·o·na·do
-            ul.menu
-                li
-                    a.menubutton.bottomshadow(href='Bio') Bio
-                li
-                    a.menubutton.bottomshadow(href='Projects') Projects
-                li
-                    a.menubutton.bottomshadow(href='Blog') Blog
-                li
-                    a.menubutton.bottomshadow(href='Resume') Resume
-                li
-                    a.menubutton.bottomshadow(href='Sandbox') Sandbox
-            .divider
 
             div(ng-view)
-
-        #footer
-            .container
-                p(class = "muted credit")   Credit
+        #push
+    #footer
+        .container
+            p(class = "muted credit")   Built by Matt Lovan
 
 
     script(src='js/lib/jquery-1.9.1.js')
