--- a/views/partials/Resume.jade
+++ b/views/partials/Resume.jade
@@ -1,3 +1,16 @@
+ul.menu
+    li
+        a.menubutton.bottomshadow(href='Bio') Bio
+    li
+        a.menubutton.bottomshadow(href='Projects') Projects
+    li
+        a.menubutton.bottomshadow(href='Blog') Blog
+    li
+        a.menubutton.bottomshadow.active(href='Resume') Resume
+    li
+        a.menubutton.bottomshadow(href='Sandbox') Sandbox
+.divider
+
 include DocumentButtons
 
 .row
