--- a/views/partials/Blog.jade
+++ b/views/partials/Blog.jade
@@ -5,13 +5,13 @@
 
 ul.menu
     li
-        a.menubutton.bottomshadow(href='Bio') Bio
+        a.menubutton(href='Bio') Bio
     li
-        a.menubutton.bottomshadow(href='Projects') Projects
+        a.menubutton(href='Projects') Projects
     li
-        a.menubutton.bottomshadow.active(href='Blog') Blog
+        a.menubutton.active.bottomshadow(href='Blog') Blog
     li
-        a.menubutton.bottomshadow(href='Resume') Resume
+        a.menubutton(href='Resume') Resume
     li
-        a.menubutton.bottomshadow(href='Sandbox') Sandbox
+        a.menubutton(href='Sandbox') Sandbox
 .divider
