--- a/views/partials/Projects.jade
+++ b/views/partials/Projects.jade
@@ -8,11 +8,11 @@ ul.menu
     li
         a.menubutton.bottomshadow.active(href='Projects') Projects
     li
-        a.menubutton.bottomshadow(href='Blog') Blog
+        a.menubutton(href='Blog') Blog
     li
-        a.menubutton.bottomshadow(href='Resume') Resume
+        a.menubutton(href='Resume') Resume
     li
-        a.menubutton.bottomshadow(href='Sandbox') Sandbox
+        a.menubutton(href='Sandbox') Sandbox
 .divider
 ul.thumbnails
     li.span4
