--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,7 @@
 .menu {
   list-style: none;
   margin-left: 0px;
-  margin: 1em;
+  margin: 2em;
 }
 
 .menu > li {
@@ -12,35 +12,28 @@
 
 .menubutton {
     color: #fff;
-    padding: 0.5em 1em;
-    margin: 0 0 0 .75em;
-    background-color: #91B5DB;
-    border-top-color: #91B5DB;
-    border-left-color: #91B5DB;
-    border-right-color: #91B5DB;
-    border-bottom-color: #7591b1;
-    border-width: 1px;
-    border-style: solid;
+    padding: 1em 2em;
+
+    background-color: #023A61;
+    border-top-color: #023A61;
+    border-left-color: #023A61;
+    border-right-color: #023A61;
+    border-bottom-color: #275474;
+    /*border-width: 1px;*/
+    /*border-style: solid;*/
 }
 .menubutton:hover {
-    filter:         brightness(0.9);
-    // Browser Specific
-    -webkit-filter: brightness(0.9);
-    -moz-filter:    brightness(0.9);
-    -o-filter:      brightness(0.9);
-    -ms-filter:     brightness(0.9);
+    background-color: #0A64A4;
     color: white;
-    text-decoration: none;
+    text-transform: none;
+}
 
+a:hover {
+    text-transform: none;
 }
 
 .active {
-   -moz-box-shadow:    inset 0 0 10px 1px #7591b1;
-   -webkit-box-shadow: inset 0 0 10px 1px #7591b1;
-   box-shadow:         inset 0 0 10px 1px #7591b1;
-    background-color: #7591b1;
-
-
+    background-color: #0A64A4;
 }
 
 
@@ -53,7 +46,7 @@
 
 .hero-unit{
     color: #ffffff;
-    background-color: #2C4864;
+    background-color: #58A9E3;
     border-radius: 0;
     margin-bottom: 0em;
 }
