--- a/views/partials/Resume.jade
+++ b/views/partials/Resume.jade
@@ -1,14 +1,14 @@
 ul.menu
     li
-        a.menubutton.bottomshadow(href='Bio') Bio
+        a.menubutton(href='Bio') Bio
     li
-        a.menubutton.bottomshadow(href='Projects') Projects
+        a.menubutton(href='Projects') Projects
     li
-        a.menubutton.bottomshadow(href='Blog') Blog
+        a.menubutton(href='Blog') Blog
     li
         a.menubutton.bottomshadow.active(href='Resume') Resume
     li
-        a.menubutton.bottomshadow(href='Sandbox') Sandbox
+        a.menubutton(href='Sandbox') Sandbox
 .divider
 
 include DocumentButtons
