--- a/views/partials/DocumentButtons.jade
+++ b/views/partials/DocumentButtons.jade
@@ -9,8 +9,8 @@
             .pull-right
                 ul.inline
                     li
-                        a.menubutton.bottomshadow(href='#edit') Edit
+                        a.btn.bottomshadow(href='#edit') Edit
                     li
-                        a.menubutton.bottomshadow(href='#Print') Print
+                        a.btn.bottomshadow(href='#Print') Print
                     li
-                        a.menubutton.bottomshadow(href='#Save') Save as PDF
+                        a.btn.bottomshadow(href='#Save') Save as PDF
