--- a/views/partials/DocumentButtons.jade
+++ b/views/partials/DocumentButtons.jade
@@ -8,9 +8,9 @@
         .readtext
             .pull-right
                 ul.inline
+                    //li
+                    //    a.btn.bottomshadow(href='#edit') Edit
                     li
-                        a.btn.bottomshadow(href='#edit') Edit
-                    li
-                        a.btn.bottomshadow(href='#Print') Print
-                    li
-                        a.btn.bottomshadow(href='#Save') Save as PDF
+                        a.btn.bottomshadow(href='javascript:window.print()') Print
+                    //li
+                    //    a.btn.bottomshadow(href='#Save') Save as PDF
