--- a/views/partials/Resume.jade
+++ b/views/partials/Resume.jade
@@ -1,15 +1,3 @@
-ul.menu
-    li
-        a.menubutton(href='Bio') Bio
-    li
-        a.menubutton(href='Projects') Projects
-    li
-        a.menubutton(href='Blog') Blog
-    li
-        a.menubutton.bottomshadow.active(href='Resume') Resume
-    li
-        a.menubutton(href='Sandbox') Sandbox
-.divider
 
 include DocumentButtons
 
@@ -23,16 +11,9 @@ include DocumentButtons
             h5.SectionTitle  Samples, Demos, Projects
 
             ul.inline
-                li
+
+                li.btn
                     a(href='https://github.com/MagRelo') GitHub
-                li
-                    a(href='view2') StackOverflow
-                li
-                    a(href='view2') LinkedIn
-                li
-                    a(href='view2') Facebook
-                li
-                    a(href='view2') Twitter
 
             h5.SectionTitle  Education
             p  University of Idaho
