--- a/views/partials/Projects.jade
+++ b/views/partials/Projects.jade
@@ -2,28 +2,44 @@
    Created by MLovan
    Date: 5/5/13
    Time: 8:09 PM
-ul.thumbnails
-    li.span4
-        a.thumbnail.text-center(href="http://comparetreatment.herokuapp.com", target="_blank")
-            img(src="img/pie-chart-icon.png", alt="")
-            h3 Compare Treatment
-            p Tool for comparing diabetes treatment
-
-    li.span4
-        .thumbnail.text-center
-            img(src="img/dog-icon.png", alt="")
-            h3 Dog Website
-            p Keep track of yout litter
-
-    li.span4
-        a.thumbnail.text-center(href="http://stackoverflow.com/users/2329853/matt-lovan", target="_blank")
-            img(src="img/rsz_so-icon.png", alt="")
-            h3 stackoverflow
-            p View My Profile
 
 
-    li.span4
-        a.thumbnail.text-center(href="https://github.com/MagRelo", target="_blank")
-            img(src="img/github-icon.png", alt="")
-            h3 Git Projects
-            p Browse the code for all projects on this site
+
+.row-fluid
+    .span10.offset1
+        h4 Community
+        .divider
+        ul.thumbnails
+            li.span4
+                a.thumbnail.text-center(href="https://github.com/MagRelo", target="_blank")
+                    //img(src="img/github-icon.png", alt="")
+                    h4 Git Projects
+                    p Browse code
+
+
+            li.span4
+                a.thumbnail.text-center(href="http://stackoverflow.com/users/2329853/matt-lovan", target="_blank")
+                    //img(src="img/rsz_so-icon.png", alt="")
+                    h4 stackoverflow
+                    p View My Profile
+
+
+
+.row-fluid
+    .span10.offset1
+        h4 Projects
+        .divider
+
+        ul.thumbnails
+            li.span4
+                a.thumbnail.text-center(href="http://comparetreatment.herokuapp.com", target="_blank")
+                    img(src="img/pie-chart-icon.png", alt="")
+                    h3 Compare Treatment
+                    p Tool for comparing diabetes treatment
+
+            li.span4
+                .thumbnail.text-center
+                    img(src="img/dog-icon.png", alt="")
+                    h3 Dog Website
+                    p Keep track of yout litter
+
