--- a/views/partials/Projects.jade
+++ b/views/partials/Projects.jade
@@ -41,5 +41,5 @@
                 .thumbnail.text-center
                     img(src="img/dog-icon.png", alt="")
                     h3 Dog Website
-                    p Keep track of yout litter
+                    p Keep track of your litter
 
