change project desc

--- a/views/partials/Projects.jade
+++ b/views/partials/Projects.jade
@@ -35,7 +35,7 @@
                 a.thumbnail.text-center(href="http://comparetreatment.herokuapp.com", target="_blank")
                     img(src="img/pie-chart-icon.png", alt="")
                     h3 Compare Treatment
-                    p Tool for comparing diabetes treatment
+                    p Compare your treatments
 
             li.span4
                 .thumbnail.text-center
