--- a/views/index.jade
+++ b/views/index.jade
@@ -5,8 +5,6 @@ block body
     #wrap
         .container(ng-controller='AppCtrl')
 
-
-
             .hero-unit
                 h1 Matt Lovan
                 p web development a·fi·ci·o·na·do
@@ -17,18 +15,17 @@ block body
 
             div(ng-view)
         #push
+
     #footer
         .container
             p(class = "muted credit")   Built by Matt Lovan
 
 
-
-
     script(src='js/lib/jquery-1.9.1.js')
+    script(src='js/lib/bootstrap.js')
     script(src='js/lib/angular/angular.js')
     script(src='js/app.js')
     script(src='js/services.js')
     script(src='js/controllers.js')
     script(src='js/filters.js')
     script(src='js/directives.js')
-    //script(src='js/lib/Set3D.js')
