--- a/views/partials/DocumentButtons.jade
+++ b/views/partials/DocumentButtons.jade
@@ -8,8 +8,8 @@
         .readtext
             .pull-right
                 ul.inline
-                    //li
-                    //    a.btn.bottomshadow(href='#edit') Edit
+                    li
+                        button.btn.btn-primary(href='#edit', data-toggle="button") Edit
                     li
                         a.btn.bottomshadow(href='javascript:window.print()') Print
                     //li
