--- a/views/index.jade
+++ b/views/index.jade
@@ -3,8 +3,7 @@ extends layout
 block body
 
     #wrap
-        .container(ng-controller='AppCtrl')
-
+        .container
             .hero-unit
                 h1 Matt Lovan
                 p web development a·fi·ci·o·na·do
