--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,6 +43,7 @@ a:hover{
     background-color: #58A9E3;
     border-radius: 0;
     margin-bottom: 0em;
+    padding: 35px;
 }
 
 .picture{
@@ -62,7 +63,7 @@ a:hover{
     min-height: 20px;
     padding: 19px;
     margin-bottom: 20px;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     border: 1px solid #77818B;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
@@ -83,24 +84,23 @@ a:hover{
 }
 
 .SectionContent{
-    max-width: 46em;
-    margin-left: auto;
-    margin-right: auto;
+    max-width: 40em;
+    margin-left: 3em;
+    margin-top: 1em;
 }
 
 .readtext{
-    max-width: 55em;
+    max-width: 48em;
     margin-left: auto;
     margin-right: auto  ;
-    color: #2B2D30;
+    /*color: #2B2D30;*/
 }
 
 .document {
     min-height: 20px;
     padding: 19px;
     margin-bottom: 20px;
-    margin-top: 20px;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     border: 1px solid #bbbbbb;
 }
 
@@ -166,4 +166,33 @@ body {
         padding-left: 20px;
         padding-right: 20px;
     }
+}
+
+
+.btnmargin{
+    margin-left: .5em;
+    line-height: inherit;
+    top: 50%;
+ }
+
+
+.input-append,
+.input-prepend {
+    margin-bottom: 0;
+}
+
+.docButtons{
+    margin-bottom: 20px;
+
+}
+
+
+.docH3{
+    font-size: 24.5px;
+    line-height: 40px;
+    margin: 10px 0;
+    font-family: inherit;
+    font-weight: bold;
+    color: inherit;
+    text-rendering: optimizelegibility;
 }
